--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "koa": "next",
     "koa-bodyparser": "next",
     "koa-ejs": "^3.0.0",
+    "koa-logger": "^3.0.0",
     "koa-router": "next",
     "koa-static": "^2.0.0",
     "koa-views": "next",
+    "mysql": "^2.13.0",
     "mysql2": "^1.1.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sequelize": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "6.13.2",
